--- a/buildout.cfg
+++ b/buildout.cfg
@@ -5,6 +5,13 @@ parts = munin-varnish
 develop = .
 
 
+[varnish-build]
+# This would normally be a zc.recipe.cmmi part that builds Varnish.
+# That recipe sets the location option itself. For this development we
+# just fake up such a part and location.
+location = ${buildout:directory}/parts/varnish-build
+
+
 [munin-varnish]
 recipe = munin.varnish
-varnishstat = ${buildout:directory}/parts/varnish-build/sbin/varnishstat
+varnishstat = ${varnish-build:location}/sbin/varnishstat
