Repair the expected path for varnishstat.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,4 +14,4 @@ location = ${buildout:directory}/parts/varnish-build
 
 [munin-varnish]
 recipe = munin.varnish
-varnishstat = ${varnish-build:location}/sbin/varnishstat
+varnishstat = ${varnish-build:location}/bin/varnishstat
